# to_do_site

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  Todo.jsx  index.css
