[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
chrono = "0.4.40"
dotenv = "0.15.0"
futures-util = "0.3.31"
mongodb = "3.2.3"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"]}
tower-http = { version = "0.6.2", features = ["cors"] }
